# periodic

./: .gitignore  .mimir.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  build.rs  deny.toml  dist-workspace.toml  mise.toml
.claude/skills/changelog/: SKILL.md
.github/workflows/: ci.yml  prerelease.yml  version-guard.yml
src/: cli.rs  config.rs  config_edit.rs  config_mutation.rs  daemon.rs  diagnostics.rs  doctor.rs  error.rs  events.rs  executor.rs  ipc.rs  job_block.rs  jobs_edit.rs  logs.rs  main.rs  output.rs  scheduler.rs  self_update.rs  service.rs  state.rs  util.rs  validation.rs
tests/: completion_cli.rs  daemon_cli.rs  doctor_cli.rs  history_cli.rs  jobs_cli.rs  logs_cli.rs  reload_cli.rs  run_cli.rs  validate_cli.rs
tests/fixtures/: invalid.yaml  valid.yaml
tests/golden/: jobs_list_basic.json  validate_basic.json
