[package]
name = "periodic"
version = "0.1.0-next"
edition = "2024"
description = "A user-space recurring job scheduler for developer machines, devboxes, and lightweight infrastructure."
repository = "https://github.com/dbtlr/periodic"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
axoupdater = { version = "0.10.0", features = ["blocking"] }
clap = { version = "4.6.1", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[build-dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
clap_mangen = "0.3.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
