[package]
name = "periodic"
version = "0.7.0-next"
edition = "2024"
description = "A user-space recurring job scheduler for developer machines, devboxes, and lightweight infrastructure."
repository = "https://github.com/dbtlr/periodic"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
axoupdater = { version = "0.10.0", features = ["blocking"] }
chrono = "0.4.45"
chrono-tz = "0.10.4"
clap = { version = "4.6.1", features = ["derive"] }
croner = "3.0.1"
granit-parser = "0.0.3"
iana-time-zone = "0.1"
nix = { version = "0.30", features = ["signal", "process"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-saphyr = "0.0.27"
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[build-dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
clap_mangen = "0.3.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"
